# flecs_ai

./: CMakeLists.txt  prior.cpp  wiki.py
src/: component_types.h  gen_map.py  generated_mappings.h  main.cpp  old_main.cpp  vital_module.h  vizmain.cpp
